fixed double scroll error when open model

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   background-color: rgb(0, 0, 0);
 }
 
+.app-fixed {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+}
+
 /* .slick-slide {
   background-color: white;
   }
